--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "datatables.net": "^1.10.15",
     "datatables.net-autofill": "^2.2.0",
     "datatables.net-buttons": "^1.3.1",
